// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`timeline views fetches authenticated user's home feed w/ reverse-chronological algorithm 1`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {},
      },
      "cid": "cids(0)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "upvoteCount": 2,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "reason": Object {
      "$type": "app.bsky.feed.feedViewPost#reasonRepost",
      "by": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(2)",
        "handle": "dan.test",
        "viewer": Object {
          "following": "record(1)",
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(2)",
        "handle": "dan.test",
        "viewer": Object {
          "following": "record(1)",
        },
      },
      "cid": "cids(2)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 18,
              "start": 0,
            },
            "type": "mention",
            "value": "user(0)",
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "upvoteCount": 0,
      "uri": "record(2)",
      "viewer": Object {},
    },
    "reason": Object {
      "$type": "app.bsky.feed.feedViewPost#reasonRepost",
      "by": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(3)",
        "handle": "carol.test",
        "viewer": Object {
          "followedBy": "record(4)",
          "following": "record(3)",
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {},
      },
      "cid": "cids(3)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(4)",
            "uri": "record(6)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "thanks bob",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(5)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(1)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(4)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": Object {
            "followedBy": "record(8)",
            "following": "record(7)",
          },
        },
        "cid": "cids(4)",
        "downvoteCount": 0,
        "embed": Object {
          "$type": "app.bsky.embed.images#presented",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(5)/cids(5)@jpeg",
              "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(5)/cids(5)@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "cid": "cids(5)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(6)",
        "viewer": Object {},
      },
      "root": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {},
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
        "viewer": Object {},
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(3)",
        "handle": "carol.test",
        "viewer": Object {
          "followedBy": "record(4)",
          "following": "record(3)",
        },
      },
      "cid": "cids(6)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "of course",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(9)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {},
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
        "viewer": Object {},
      },
      "root": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {},
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
        "viewer": Object {},
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(1)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(4)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {
          "followedBy": "record(8)",
          "following": "record(7)",
        },
      },
      "cid": "cids(4)",
      "downvoteCount": 0,
      "embed": Object {
        "$type": "app.bsky.embed.images#presented",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(5)/cids(5)@jpeg",
            "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(5)/cids(5)@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "cid": "cids(5)",
                "mimeType": "image/jpeg",
              },
            },
          ],
        },
        "reply": Object {
          "parent": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "hear that",
      },
      "replyCount": 1,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(6)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {},
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
        "viewer": Object {},
      },
      "root": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {},
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
        "viewer": Object {},
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {},
      },
      "cid": "cids(7)",
      "downvoteCount": 1,
      "embed": Object {
        "$type": "app.bsky.embed.record#presented",
        "record": Object {
          "$type": "app.bsky.embed.record#presentedRecord",
          "author": Object {
            "declaration": Object {
              "actorType": "",
              "cid": "",
            },
            "did": "user(2)",
            "handle": "dan.test",
            "viewer": Object {
              "following": "record(1)",
            },
          },
          "cid": "cids(2)",
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "entities": Array [
              Object {
                "index": Object {
                  "end": 18,
                  "start": 0,
                },
                "type": "mention",
                "value": "user(0)",
              },
            ],
            "text": "@alice.bluesky.xyz is the best",
          },
          "uri": "record(2)",
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.record",
          "record": Object {
            "cid": "cids(2)",
            "uri": "record(2)",
          },
        },
        "text": "yoohoo",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 1,
      "uri": "record(10)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(1)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(4)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {
          "followedBy": "record(8)",
          "following": "record(7)",
        },
      },
      "cid": "cids(8)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "bobby boy here",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(11)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {},
      },
      "cid": "cids(0)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "upvoteCount": 2,
      "uri": "record(0)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(2)",
        "handle": "dan.test",
        "viewer": Object {
          "following": "record(1)",
        },
      },
      "cid": "cids(2)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 18,
              "start": 0,
            },
            "type": "mention",
            "value": "user(0)",
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "upvoteCount": 0,
      "uri": "record(2)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(2)",
        "handle": "dan.test",
        "viewer": Object {
          "following": "record(1)",
        },
      },
      "cid": "cids(9)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "dan here!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(12)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(3)",
        "handle": "carol.test",
        "viewer": Object {
          "followedBy": "record(4)",
          "following": "record(3)",
        },
      },
      "cid": "cids(10)",
      "downvoteCount": 0,
      "embed": Object {
        "$type": "app.bsky.embed.images#presented",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(6)/cids(5)@jpeg",
            "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(6)/cids(5)@jpeg",
          },
          Object {
            "alt": "tests/image/fixtures/key-alt.jpg",
            "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(6)/cids(11)@jpeg",
            "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(6)/cids(11)@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "cid": "cids(5)",
                "mimeType": "image/jpeg",
              },
            },
            Object {
              "alt": "tests/image/fixtures/key-alt.jpg",
              "image": Object {
                "cid": "cids(11)",
                "mimeType": "image/jpeg",
              },
            },
          ],
        },
        "text": "hi im carol",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 2,
      "uri": "record(13)",
      "viewer": Object {
        "upvote": "record(14)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(1)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(4)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {
          "followedBy": "record(8)",
          "following": "record(7)",
        },
      },
      "cid": "cids(12)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "bob back at it again!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(15)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {},
      },
      "cid": "cids(13)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "hey there",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(16)",
      "viewer": Object {},
    },
  },
]
`;

exports[`timeline views fetches authenticated user's home feed w/ reverse-chronological algorithm 2`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(0)",
        "handle": "dan.test",
        "viewer": Object {
          "followedBy": "record(1)",
        },
      },
      "cid": "cids(0)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 18,
              "start": 0,
            },
            "type": "mention",
            "value": "user(1)",
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "upvoteCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "reason": Object {
      "$type": "app.bsky.feed.feedViewPost#reasonRepost",
      "by": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(2)",
        "handle": "carol.test",
        "viewer": Object {
          "following": "record(2)",
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(2)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "followedBy": "record(5)",
          "following": "record(4)",
        },
      },
      "cid": "cids(1)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(4)",
            "uri": "record(7)",
          },
          "root": Object {
            "cid": "cids(3)",
            "uri": "record(6)",
          },
        },
        "text": "thanks bob",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(3)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(2)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(4)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": Object {},
        },
        "cid": "cids(4)",
        "downvoteCount": 0,
        "embed": Object {
          "$type": "app.bsky.embed.images#presented",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(5)/cids(5)@jpeg",
              "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(5)/cids(5)@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "cid": "cids(5)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(3)",
              "uri": "record(6)",
            },
            "root": Object {
              "cid": "cids(3)",
              "uri": "record(6)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(7)",
        "viewer": Object {},
      },
      "root": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(2)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "followedBy": "record(5)",
            "following": "record(4)",
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(6)",
        "viewer": Object {
          "upvote": "record(8)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(2)",
        "handle": "carol.test",
        "viewer": Object {
          "following": "record(2)",
        },
      },
      "cid": "cids(6)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(3)",
            "uri": "record(6)",
          },
          "root": Object {
            "cid": "cids(3)",
            "uri": "record(6)",
          },
        },
        "text": "of course",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(9)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(2)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "followedBy": "record(5)",
            "following": "record(4)",
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(6)",
        "viewer": Object {
          "upvote": "record(8)",
        },
      },
      "root": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(2)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "followedBy": "record(5)",
            "following": "record(4)",
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(6)",
        "viewer": Object {
          "upvote": "record(8)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(2)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(4)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {},
      },
      "cid": "cids(4)",
      "downvoteCount": 0,
      "embed": Object {
        "$type": "app.bsky.embed.images#presented",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(5)/cids(5)@jpeg",
            "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(5)/cids(5)@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "cid": "cids(5)",
                "mimeType": "image/jpeg",
              },
            },
          ],
        },
        "reply": Object {
          "parent": Object {
            "cid": "cids(3)",
            "uri": "record(6)",
          },
          "root": Object {
            "cid": "cids(3)",
            "uri": "record(6)",
          },
        },
        "text": "hear that",
      },
      "replyCount": 1,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(7)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(2)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "followedBy": "record(5)",
            "following": "record(4)",
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(6)",
        "viewer": Object {
          "upvote": "record(8)",
        },
      },
      "root": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(2)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "followedBy": "record(5)",
            "following": "record(4)",
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(6)",
        "viewer": Object {
          "upvote": "record(8)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(2)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "followedBy": "record(5)",
          "following": "record(4)",
        },
      },
      "cid": "cids(7)",
      "downvoteCount": 1,
      "embed": Object {
        "$type": "app.bsky.embed.record#presented",
        "record": Object {
          "$type": "app.bsky.embed.record#presentedRecord",
          "author": Object {
            "declaration": Object {
              "actorType": "",
              "cid": "",
            },
            "did": "user(0)",
            "handle": "dan.test",
            "viewer": Object {
              "followedBy": "record(1)",
            },
          },
          "cid": "cids(0)",
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "entities": Array [
              Object {
                "index": Object {
                  "end": 18,
                  "start": 0,
                },
                "type": "mention",
                "value": "user(1)",
              },
            ],
            "text": "@alice.bluesky.xyz is the best",
          },
          "uri": "record(0)",
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.record",
          "record": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "yoohoo",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 1,
      "uri": "record(10)",
      "viewer": Object {
        "downvote": "record(11)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(2)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(4)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {},
      },
      "cid": "cids(8)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "bobby boy here",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(12)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(2)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "followedBy": "record(5)",
          "following": "record(4)",
        },
      },
      "cid": "cids(3)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "upvoteCount": 2,
      "uri": "record(6)",
      "viewer": Object {
        "upvote": "record(8)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(2)",
        "handle": "carol.test",
        "viewer": Object {
          "following": "record(2)",
        },
      },
      "cid": "cids(9)",
      "downvoteCount": 0,
      "embed": Object {
        "$type": "app.bsky.embed.images#presented",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(6)/cids(5)@jpeg",
            "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(6)/cids(5)@jpeg",
          },
          Object {
            "alt": "tests/image/fixtures/key-alt.jpg",
            "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(6)/cids(10)@jpeg",
            "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(6)/cids(10)@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "cid": "cids(5)",
                "mimeType": "image/jpeg",
              },
            },
            Object {
              "alt": "tests/image/fixtures/key-alt.jpg",
              "image": Object {
                "cid": "cids(10)",
                "mimeType": "image/jpeg",
              },
            },
          ],
        },
        "text": "hi im carol",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 2,
      "uri": "record(13)",
      "viewer": Object {
        "upvote": "record(14)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(2)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(4)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {},
      },
      "cid": "cids(11)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "bob back at it again!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(15)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(2)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "followedBy": "record(5)",
          "following": "record(4)",
        },
      },
      "cid": "cids(12)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "hey there",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(16)",
      "viewer": Object {},
    },
  },
]
`;

exports[`timeline views fetches authenticated user's home feed w/ reverse-chronological algorithm 3`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(0)",
        "handle": "dan.test",
        "viewer": Object {},
      },
      "cid": "cids(0)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 18,
              "start": 0,
            },
            "type": "mention",
            "value": "user(1)",
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "upvoteCount": 0,
      "uri": "record(0)",
      "viewer": Object {
        "repost": "record(1)",
      },
    },
    "reason": Object {
      "$type": "app.bsky.feed.feedViewPost#reasonRepost",
      "by": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(2)",
        "handle": "carol.test",
        "viewer": Object {},
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(2)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "followedBy": "record(4)",
          "following": "record(3)",
        },
      },
      "cid": "cids(1)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(4)",
            "uri": "record(6)",
          },
          "root": Object {
            "cid": "cids(3)",
            "uri": "record(5)",
          },
        },
        "text": "thanks bob",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(2)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(2)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(4)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": Object {
            "followedBy": "record(8)",
          },
        },
        "cid": "cids(4)",
        "downvoteCount": 0,
        "embed": Object {
          "$type": "app.bsky.embed.images#presented",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(5)/cids(5)@jpeg",
              "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(5)/cids(5)@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "cid": "cids(5)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(3)",
              "uri": "record(5)",
            },
            "root": Object {
              "cid": "cids(3)",
              "uri": "record(5)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(6)",
        "viewer": Object {},
      },
      "root": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(2)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "followedBy": "record(4)",
            "following": "record(3)",
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(5)",
        "viewer": Object {
          "downvote": "record(7)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(2)",
        "handle": "carol.test",
        "viewer": Object {},
      },
      "cid": "cids(6)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(3)",
            "uri": "record(5)",
          },
          "root": Object {
            "cid": "cids(3)",
            "uri": "record(5)",
          },
        },
        "text": "of course",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(9)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(2)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "followedBy": "record(4)",
            "following": "record(3)",
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(5)",
        "viewer": Object {
          "downvote": "record(7)",
        },
      },
      "root": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(2)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "followedBy": "record(4)",
            "following": "record(3)",
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(5)",
        "viewer": Object {
          "downvote": "record(7)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(2)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "followedBy": "record(4)",
          "following": "record(3)",
        },
      },
      "cid": "cids(7)",
      "downvoteCount": 1,
      "embed": Object {
        "$type": "app.bsky.embed.record#presented",
        "record": Object {
          "$type": "app.bsky.embed.record#presentedRecord",
          "author": Object {
            "declaration": Object {
              "actorType": "",
              "cid": "",
            },
            "did": "user(0)",
            "handle": "dan.test",
            "viewer": Object {},
          },
          "cid": "cids(0)",
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "entities": Array [
              Object {
                "index": Object {
                  "end": 18,
                  "start": 0,
                },
                "type": "mention",
                "value": "user(1)",
              },
            ],
            "text": "@alice.bluesky.xyz is the best",
          },
          "uri": "record(0)",
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.record",
          "record": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "yoohoo",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 1,
      "uri": "record(10)",
      "viewer": Object {
        "upvote": "record(11)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(2)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "followedBy": "record(4)",
          "following": "record(3)",
        },
      },
      "cid": "cids(3)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "upvoteCount": 2,
      "uri": "record(5)",
      "viewer": Object {
        "downvote": "record(7)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(2)",
        "handle": "carol.test",
        "viewer": Object {},
      },
      "cid": "cids(8)",
      "downvoteCount": 0,
      "embed": Object {
        "$type": "app.bsky.embed.images#presented",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(6)/cids(5)@jpeg",
            "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(6)/cids(5)@jpeg",
          },
          Object {
            "alt": "tests/image/fixtures/key-alt.jpg",
            "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(6)/cids(9)@jpeg",
            "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(6)/cids(9)@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "cid": "cids(5)",
                "mimeType": "image/jpeg",
              },
            },
            Object {
              "alt": "tests/image/fixtures/key-alt.jpg",
              "image": Object {
                "cid": "cids(9)",
                "mimeType": "image/jpeg",
              },
            },
          ],
        },
        "text": "hi im carol",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 2,
      "uri": "record(12)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(2)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "followedBy": "record(4)",
          "following": "record(3)",
        },
      },
      "cid": "cids(10)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "hey there",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(13)",
      "viewer": Object {},
    },
  },
]
`;

exports[`timeline views fetches authenticated user's home feed w/ reverse-chronological algorithm 4`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "followedBy": "record(1)",
        },
      },
      "cid": "cids(0)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "upvoteCount": 2,
      "uri": "record(0)",
      "viewer": Object {
        "repost": "record(2)",
        "upvote": "record(3)",
      },
    },
    "reason": Object {
      "$type": "app.bsky.feed.feedViewPost#reasonRepost",
      "by": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(2)",
        "handle": "dan.test",
        "viewer": Object {},
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(1)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(3)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {
          "following": "record(5)",
        },
      },
      "cid": "cids(2)",
      "downvoteCount": 0,
      "embed": Object {
        "$type": "app.bsky.embed.images#presented",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(4)/cids(3)@jpeg",
            "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(4)/cids(3)@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "cid": "cids(3)",
                "mimeType": "image/jpeg",
              },
            },
          ],
        },
        "reply": Object {
          "parent": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "hear that",
      },
      "replyCount": 1,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(4)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "followedBy": "record(1)",
          },
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
        "viewer": Object {
          "repost": "record(2)",
          "upvote": "record(3)",
        },
      },
      "root": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
          "declaration": Object {
            "actorType": "",
            "cid": "",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "followedBy": "record(1)",
          },
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
        "viewer": Object {
          "repost": "record(2)",
          "upvote": "record(3)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(1)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(3)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {
          "following": "record(5)",
        },
      },
      "cid": "cids(4)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "bobby boy here",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(6)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(2)",
        "handle": "dan.test",
        "viewer": Object {},
      },
      "cid": "cids(5)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 18,
              "start": 0,
            },
            "type": "mention",
            "value": "user(0)",
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "upvoteCount": 0,
      "uri": "record(7)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(2)",
        "handle": "dan.test",
        "viewer": Object {},
      },
      "cid": "cids(6)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "dan here!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(8)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(1)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(3)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {
          "following": "record(5)",
        },
      },
      "cid": "cids(7)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "bob back at it again!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(9)",
      "viewer": Object {},
    },
  },
]
`;
